# Roadside_object_geolocation

./: README.md  pyproject.toml  requirements.txt
Geolocation_MRF/: README.md  requirements_mrf.txt  run_DCC_inference.py  run_mrf_geolocation.py
scripts/: evaluate_classifier.py  evaluate_gradcam_iou.py  run_gradcam.py  train_classifier.py
src/mappillary_classifier/: __init__.py  datasets.py  evaluate.py  gradcam_localization.py  iou_evaluation.py  models.py  train.py  utils.py  visualization.py
