[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mappillary-gradcam-classifier"
version = "0.1.0"
description = "Roadside object classification and Grad-CAM localization pipeline"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
